# sshportal

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml  release.yml
src/: control.rs  keys.rs  lib.rs  platform.rs  shell.rs  websocket.rs
src/shell/: client.rs  common.rs  forwarding.rs  local_proxy.rs  remote.rs  socks.rs  tests.rs
tools/: docker_e2e.py
